finished writing tasks

--- a/Assignment 3/1 ERGMs/main.ipynb
+++ b/Assignment 3/1 ERGMs/main.ipynb
@@ -629,6 +629,18 @@
    "source": [
     "### 5. Write a short paragraph to comment on the interpretation of strength assortativity for this dataset, and about the conclusions you can draw via the inference you made using the ERGM models."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With respect to strength assortativity the network can be said well represented by the directed configuration model.\n",
+    "\n",
+    "In general, with respect to the data, a high strength assortativity would represent a high amount of trades between countries and a low strength assortativity would depict a low volume between countries. This can be well represented by weights in a network, accordingly there is just a small gap between the real-world values and the directed enhanced cm.\n",
+    "Since the undirected enhance configuration model does not take the direction into account, the gap is a little larger but still in the single digit area. Accordingly also not bad.\n",
+    "\n",
+    "Now, strength assortativity works really good as a metric, but this does not necessarily imply that the same holds for another metric. If you'd look at degree centrality or clustering, for example, this might look completely different. Therefore, it's not possible to make a general statement."
+   ]
   }
  ],
  "metadata": {
