--- a/Assignment 3/2 Stock correlations/main.ipynb
+++ b/Assignment 3/2 Stock correlations/main.ipynb
@@ -90,7 +90,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "According to the eigenvalue gaps, there is a market mode for cormat_1h.npy, cormat_1m.npy, cormat_onefactor_1h.npy and cormat_onefactor_1m.npy."
+    "Significant eigenvalue gaps in both 1-hour and 1-minute log-returns indicate a clear market mode.\n",
+    "\n",
+    "Despite a lower gap, the One-Factor matrix indicates a market mode at both timescales.\n",
+    "\n",
+    "The Gaussian matrices suggests the absence of a distinct market mode."
    ]
   },
   {
@@ -188,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Plot the degree distributions at 1 minute and 1 hour. Are the degree distributions qualitatively the same? Provide a comment to explain eventual similarities or dissimilarities."
+    "### 3. Plot the degree distributions at 1 minute and 1 hour."
    ]
   },
   {
@@ -369,7 +373,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Compare the MST degree distributions of the 1 hour, 1 minute, Normal and One-Factor correlations: for each time scale, plot the three different distributions on the same plot. Is the degree distribution of MSTs well reproduced by the null Gaussian and One-Factor models?"
+    "### Are the degree distributions qualitatively the same? Provide a comment to explain eventual similarities or dissimilarities."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "cormat_1h resembles the comrat_gaussian_1h, and the cormat_1m resembles the corresponding gaussian 1m model. This becomes particularly clear when looking at the log-log plots. This surprises to some extent since the gaussian model showed no signs of market mode in contrast to the real-valued log-returns.\n",
+    "\n",
+    "The log-returns are not perfectly matched by the gaussian models, e.g. for 1 minute, the gaussian model looks way bulbier. But still both approach 0 frequency with increasing degrees similar to an inverse parable and have a slight peak when being close to 0 alreay.\n",
+    "The 1-hour model looks similar to the gaussian 1-hour model.\n",
+    "Therefore, you could argue they are qualitatively, but not quantitatively (!), the same.\n",
+    "\n",
+    "The One factor model on the other hand is quite different to the real values, you could interpret a little bit similarity between the 1-hour model and the log-return 1-hour model, but the 1-minute models look different.\n",
+    "\n",
+    "The similarity of the real-valued MST and the Gaussian Model, respectively the one-factor 1-hour model, can be explained by a similar distribution in the reality, i.e. the stock trading are to some degree gaussian distributed.\n",
+    "Meaning that, within the 97 most capitalized stocks the returns are correlated, for example if the MSFT stock has a good result, also APPLE has a good result. This would make sense, since branches of the economy are typically intra-related. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Compare the MST degree distributions of the 1 hour, 1 minute, Normal and One-Factor correlations: for each time scale, plot the three different distributions on the same plot."
    ]
   },
   {
@@ -515,6 +542,30 @@
     "\n",
     "for time_scale, degree_dist in degree_dists.items():\n",
     "    plot_log_log_mst_degree_distribution(degree_dist, labels, title + \" for \" + time_scale)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Is the degree distribution of MSTs well reproduced by the null Gaussian and One-Factor models?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As explained above:\n",
+    "\n",
+    "\"cormat_1h resembles the comrat_gaussian_1h, and the cormat_1m resembles the corresponding gaussian 1m model. This becomes particularly clear when looking at the log-log plots. This surprises to some extent since the gaussian model showed no signs of market mode in contrast to the real-valued log-returns.\n",
+    "\n",
+    "The log-returns are not perfectly matched by the gaussian models, e.g. for 1 minute, the gaussian model looks way bulbier. But still both approach 0 frequency with increasing degrees similar to an inverse parable and have a slight peak when being close to 0 alreay.\n",
+    "The 1-hour model looks similar to the gaussian 1-hour model.\n",
+    "Therefore, you could argue they are qualitatively, but not quantitatively (!), the same.\n",
+    "\n",
+    "The One factor model on the other hand is quite different to the real values, you could interpret a little bit similarity between the 1-hour model and the log-return 1-hour model, but the 1-minute models look different.\"\n",
+    "\n",
+    "Accordingly, the degree distribution of the MSTs seem to be well reproduced by the Gaussian respectively the one-factor 1-hour model."
    ]
   }
  ],
