--- a/Assignment 3/3 Robustness/main.ipynb
+++ b/Assignment 3/3 Robustness/main.ipynb
@@ -426,6 +426,26 @@
     "for k, v in dataset_graph.items():\n",
     "    plot_largest_connected_component_size(v, attack_scenarios, removal_percentages, k)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Erdos-Rényi (ER) networks with an average degree (k) of 1, both random node and random edge failures exhibit similar trends, indicating a degree of uniformity in their vulnerability. Similarly, targeted attacks based on degree centrality and betweenness centrality result in comparable network breakdowns. When the average degree increases to 4 in ER networks, the curve for random edge failure becomes more pronounced, forming a bulbous shape, while random node failure retains a similar pattern. Targeted attacks based on degree and betweenness centrality still exhibit similar behaviors.\n",
+    "\n",
+    "Barabási-Albert (BA) networks with m=2, the patterns resemble those observed in ER networks with k=4. However, the curve for random node failure takes on a more linear trajectory, gradually approaching zero. Meanwhile, the bulbous nature of the curve for random edge failure persists, and the targeted attacks based on degree and betweenness centrality remain closely aligned. In BA networks with m=4, the curve for random edge failure becomes even more pronounced, nearly forming a square shape. Conversely, the curve for random node failure adopts a more linear trend. Remarkably, targeted attacks based on degree and betweenness centrality maintain an L-shaped pattern, demonstrating their consistency.\n",
+    "\n",
+    "The graph_eu_airlines.gml closely resembles a BA network with m=4, suggesting that real-world networks may share structural characteristics with scale-free models. This aligns with the concept that real-world networks often exhibit scale-free properties.\n",
+    "Regarding hubs: The presence of hubs in this network, which closely resembles a Barabási-Albert (BA) model with m=4, aligns with the characteristics of scale-free networks.\n",
+    "Scale-free networks are known for having a few highly connected hubs, which play a critical role in maintaining the overall connectivity of the network.\n",
+    "In the context of an air transportation network, hubs could represent major airports that serve as central points for connecting flights, facilitating efficient travel across the network. Hubs contribute to the resilience of the network by maintaining multiple connections, allowing for alternative routes in case of failures.\n",
+    "Scale-free networks, with their hierarchical structure, are generally robust against random attacks on low-degree nodes.\n",
+    "\n",
+    "graph_power.gml exhibits an intermediary behavior between ER networks with k=1 and ER networks with k=4, underscoring the diverse nature of real-world network topologies.\n",
+    "Regarding hubs: The network structure in graph_power.gml may include some nodes with higher degrees, but they may not exhibit the extreme connectivity associated with hubs in scale-free networks. Hubs, if present, may have a more distributed influence rather than being highly concentrated, reflecting a blend of random and more organized connections. The network's resilience might be more balanced, with a combination of hubs and well-connected nodes contributing to overall robustness. Robustness against random failures could be supported by the network's interconnectedness, while a moderate hub distribution may provide some protection against targeted attacks.\n",
+    "\n",
+    "While scale-free networks like graph_eu_airlines.gml may excel in handling random failures but face challenges with targeted attacks on hubs, networks with intermediary characteristics like graph_power.gml may strike a balance, leveraging a combination of hub and non-hub nodes for resilience against various failure scenarios."
+   ]
   }
  ],
  "metadata": {
